# jasmine

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
docs/: DEFERRED_DOC_TYPE_LEARNING.md  DEFERRED_INFRA.md
migrations/: 001_initial.sql  002_batch_jobs.sql  003_billing_and_stripe.sql  004_clerk_user_id.sql  005_drop_password_auth.sql  006_restore_clerk_index.sql
scripts/: build_fixtures.py  demo.sh  paddle_server.py  requirements-paddle.txt  run_paddle_server.sh  setup_paddle.sh  smoke_paddle.sh
src/: config.rs  db.rs  errors.rs  lib.rs  main.rs
src/api/: batch.rs  billing.rs  extract.rs  health.rs  mcp.rs  me.rs  metrics.rs  mod.rs  parse.rs  usage.rs  webhooks.rs
src/auth/: api_key.rs  clerk.rs  handlers.rs  jwt.rs  middleware.rs  mod.rs
src/middleware/: mod.rs  rate_limit.rs  request_id.rs
src/models/: api_key.rs  batch_job.rs  mod.rs  usage_log.rs  user.rs
src/services/: billing.rs  doc_type_detector.rs  idempotency.rs  markdown_cleaner.rs  metrics.rs  mod.rs  ocr.rs  paddle_ocr.rs  parse_gate.rs  pdf_classifier.rs  pdf_parser.rs  schema_extractor.rs
static/: docs.html  index.html
tests/: test_auth.rs  test_paddle_ocr_live.rs  test_parse.rs  test_parse_auto_e2e.rs  test_parse_paddle_e2e.rs
tests/common/: mod.rs
tests/fixtures/clerk/: test_private.pem  test_public.pem
