[package]
name = "docforge"
version = "0.1.0"
edition = "2021"
description = "PDF data extraction API — structured, LLM-ready output from any PDF"

[dependencies]
# Web framework
actix-web = "4"
actix-multipart = "0.7"
actix-cors = "0.7"
actix-files = "0.6"
tokio = { version = "1", features = ["full"] }

# PDF extraction
pdf_oxide = "0.3"
htmd = "0.5"
regex-lite = "0.1"

# Database (SQLite for POC)
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }

# Auth
argon2 = "0.5"
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
sha2 = "0.10"
hmac = "0.12"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonschema = { version = "0.18", default-features = false }

# HTTP client (for future Claude API integration)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Security
actix-governor = "0.6"
validator = { version = "0.18", features = ["derive"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-actix-web = "0.7"

# Utils
anyhow = "1"
thiserror = "2"
base64 = "0.22"
tempfile = "3"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
futures-util = "0.3"

[dev-dependencies]
actix-rt = "2"
actix-http = "3"
actix-governor = "0.6"
uuid = { version = "1", features = ["v4"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
